--- a/docs/guides/max-execution-time.mdx
+++ b/docs/guides/max-execution-time.mdx
@@ -46,11 +46,15 @@ For example, if you specify `max_execution_time=5000` (approximately 83 minutes)
 
 ## Session maximum execution time
 
-When a session is started, it is assigned a maximum session timeout value. After this timeout is reached, the session is terminated, any jobs that are already running continue running, and any queued jobs that remain in the session are put into a failed state. For instructions to set the session maximum time, see [Specify the session length](./run-jobs-session#specify-length).
+When a session is started, it is assigned a maximum time to live (TTL) value. After this timeout is reached, the session is terminated, any jobs that are already running continue running, and any queued jobs that remain in the session are put into a failed state. For instructions to set the session maximum time, see [Specify the session length](./run-jobs-session#specify-length).
+
+Sessions also have an interactive time to live (iTTL) value  between jobs that cannot be configured. If no session jobs are queued within that window, the session is temporarily deactivated.
+
+To determine the maximum iTTL and TTL values for a session, use the [`session.details()`  method](run-jobs-session#session-details) and look for the `interactive_timeout` and `max_time` values, respectively.
 
 ## Batch maximum execution time
 
-Batches have an interactive timeout value (iTTL) between jobs and a maximum time to live (TTL) value. If you don't explicitly close a batch, it is deactivated after the iTTL expires and can be reactivated at any time until it reaches its  maximum TTL (usually 28800 seconds, or 8 hours).
+Batches have an iTTL between jobs and a maximum TTL value. If you don't explicitly close a batch, it is deactivated after the iTTL expires and can be reactivated at any time until it reaches its  maximum TTL (usually 28800 seconds, or 8 hours).
 
 To determine the iTTL and maximum TTL values for a batch, use the [`batch.details()`  method](run-jobs-batch#batch-details) and look for the `interactive_timeout` and `max_time` values, respectively.
 
