--- a/docs/guides/run-jobs-batch.mdx
+++ b/docs/guides/run-jobs-batch.mdx
@@ -101,7 +101,7 @@ result = job1.result()
 result2 = job2.result()
 ```
 
-If you are not using a context manager, manually close the batch.  If you leave the batch open and submit more jobs to it, it is possible that the maximum TTL will be reached while it is trying to process a job; causing that job to be canceled. You can close a batch as soon as you are done submitting jobs to it. When a batch is closed with `batch.close()`, it no longer accepts new jobs, but the already submitted jobs will still run until completion and their results can be retrieved.
+If you are not using a context manager, manually close the batch.  If you leave the batch open and submit more jobs to it, it is possible that the maximum TTL will be reached while it is trying to process a job; causing that jobs to be canceled. You can close a batch as soon as you are done submitting jobs to it. When a batch is closed with `batch.close()`, it no longer accepts new jobs, but the already submitted jobs will still run until completion and their results can be retrieved.
 
 ``` python
 batch = Batch(backend=backend)
@@ -117,13 +117,10 @@ print(f"Result2: {job2.result()}")
 batch.close()
 ```
 
-
-There are multiple ways you can reconfigure your jobs to take advantage of the parallel processing provided by batching.
-
 <span id="partition"></span>
-## Example: Partition a list of circuits into multiple jobs and run them in batch
+## Reconfigure jobs for parallel processing
 
-The following example shows how you can partition a long list of circuits into multiple jobs and run them as a batch to take advantage of the parallel processing.
+There are multiple ways you can reconfigure your jobs to take advantage of the parallel processing provided by batching. The following example shows how you can partition a long list of circuits into multiple jobs and run them as a batch to take advantage of the parallel processing.
 
  ```python
  from qiskit_ibm_runtime import SamplerV2 as Sampler, Batch
